--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <a style="text-decoration: none;"  href="https://www.amucontrollerexams.com/"><p>Aligarh Muslim University-Aligarh<img src="C:\Users\Hitech Computer\OneDrive\py\OneDrive\Desktop\Project\ford\new.gif" class="new-img" alt="New" /></p></a>
             <a style="text-decoration: none;"  href="http://jmicoe.in/"><p>Jamia Millia Islamia-Delhi<img src="C:\Users\Hitech Computer\OneDrive\py\OneDrive\Desktop\Project\ford\new.gif" class="new-img" alt="New" /></p>
             <a style="text-decoration: none;"  href="https://www.allduniv.ac.in/p/50/admission-%202022"><p>University of Allahbad<img src="C:\Users\Hitech Computer\OneDrive\py\OneDrive\Desktop\Project\ford\new.gif" class="new-img" alt="New" /></p>
-            <a style="text-decoration: none;"  href="https://admission.uod.ac.in/"><p>University of Delhi<img src="C:\Users\Hitech Computer\OneDrive\py\OneDrive\Desktop\Project\ford\new.gif" class="new-img" alt="New" /></p></a></marquee>
+            <a style="text-decoration: none;"  href="https://admission.uod.ac.in/"><p>University of Delhi<img src="ford/new.gif" class="new-img" alt="New" /></p></a></marquee>
         </div>
         <div class="services-col">
             <h3>Admit Card</h3>
