--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
         <div class="services-col">
             <h3>Admission</h3>
             <marquee direction="up" scrollamount="2" height="200" onmouseover="stop()" onmouseleave="start()"> 
-            <a style="text-decoration: none;"  href="https://msdsu.ac.in/apply-online"><p>Mahaaja Suhel Dev State University-Azamgarh<img src="C:\Users\Hitech Computer\OneDrive\py\OneDrive\Desktop\Project\ford\new.gif" class="new-img" alt="New" /></p>
-            <a style="text-decoration: none;"  href="https://www.amucontrollerexams.com/"><p>Aligarh Muslim University-Aligarh<img src="C:\Users\Hitech Computer\OneDrive\py\OneDrive\Desktop\Project\ford\new.gif" class="new-img" alt="New" ></p></a>
-            <a style="text-decoration: none;"  href="http://jmicoe.in/"><p>Jamia Millia Islamia-Delhi<img src="ford\new.gif" class="new-img" alt="New" /></p>
+            <a style="text-decoration: none;"  href="https://msdsu.ac.in/apply-online"><p>Mahaaja Suhel Dev State University-Azamgarh<img src="ford\new.gif" /></p>
+            <a style="text-decoration: none;"  href="https://www.amucontrollerexams.com/"><p>Aligarh Muslim University-Aligarh<img src="ford\new.gif" ></p></a>
+            <a style="text-decoration: none;"  href="http://jmicoe.in/"><p>Jamia Millia Islamia-Delhi<img src="ford\new.gif"></p>
             <a style="text-decoration: none;"  href="https://www.allduniv.ac.in/p/50/admission-%202022"><p>University of Allahbad<img src="ford\new.gif" ></p>
             <a style="text-decoration: none;"  href="https://admission.uod.ac.in/"><p>University of Delhi<img src="ford\new.gif" ></p></a></marquee>
         </div>
