--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
 <section class="header">
 <nav>
-    <a href="index.html"><img src="ford/Logo.png" ></a>
+    <a href="index.html"><img src="ford/mylogo.png" ></a>
     <div class="nav-links" id="navlinks">
         <i class="fa fa-times" onclick="hidemenu()"></i>
         <ul>
